--- a/lib/css/bootstrap.css
+++ b/lib/css/bootstrap.css
@@ -1209,7 +1209,7 @@ pre code {
     width: 83.33333333333334%;
   }
   .col-lg-9 {
-    width: 75%;
+    width: 55%;
   }
   .col-lg-8 {
     width: 66.66666666666666%;
@@ -1227,7 +1227,7 @@ pre code {
     width: 33.33333333333333%;
   }
   .col-lg-3 {
-    width: 25%;
+    width: 45%;
   }
   .col-lg-2 {
     width: 16.666666666666664%;
@@ -3362,6 +3362,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-bottom: 0;
   padding-left: 0;
   list-style: none;
+
 }
 .nav:before,
 .nav:after {
@@ -3382,6 +3383,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav > li {
   position: relative;
   display: block;
+  /*Falta orden que disminuye distancia entre elementos*/
 }
 .nav > li > a {
   position: relative;
@@ -3414,6 +3416,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin: 9.5px 0;
   overflow: hidden;
   background-color: #e5e5e5;
+
 }
 .nav > li > a > img {
   max-width: none;
@@ -3571,6 +3574,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   min-height: 80px;
   margin-bottom: 0;
   border: 1px solid transparent;
+   
 }
 .navbar:before,
 .navbar:after {
@@ -3791,7 +3795,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
     padding-bottom: 29.5px;
   }
   .navbar-nav.navbar-right:last-child {
-    margin-right: -15px;
+    padding: 0 0 0 350px;
   }
 }
 @media (min-width: 768px) {
@@ -3799,7 +3803,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
     float: left !important;
   }
   .navbar-right {
-    float: right !important;
+   /* float: right !important;*/
   }
 }
 .navbar-form {
@@ -3982,8 +3986,9 @@ textarea.input-group-sm > .input-group-btn > .btn {
   color: #333333;
 }
 .navbar-inverse {
-  background-color: #e21c2b;
-  border-color: #b51622;
+ /* background-color: #fff;*/
+  /*border-color: #fff;*/
+	background-image:url('iu_header.png') no-repeat;
 }
 .navbar-inverse .navbar-brand {
   color: #ffffff;
