--- a/style.css
+++ b/style.css
@@ -166,12 +166,11 @@ fieldset[disabled] .btn-primary-bootstrap.active {
 }
 .navbar-brand-image {
   float: left;
-  padding: -40px 0px 0px 0px;
+  padding: 0 15px;
 }
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand-image {
-    margin-left: 720px;
-    margin-top:-90px; /*añadido para que la imagen suba. Se queda detrás del header*/
+    margin-left: -15px;
   }
 }
 /*
@@ -338,8 +337,8 @@ fieldset[disabled] .btn-primary-bootstrap.active {
 * ==========================================================================
 */
 .content-sidebar-wrapper {
-/*  padding-top: 50px;*/
- padding-bottom: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 @media (max-width: 767px) {
   .content-sidebar-wrapper {
@@ -611,11 +610,11 @@ dl.gallery-item img {
   word-wrap: break-word;
 }
 .entry-title a {
-  color: #FF0000;
+  color: #333333;
 }
 .entry-title a:hover,
 .entry-title a:focus {
-  color: #AA0000;
+  color: #595959;
 }
 .entry-title a:focus {
   outline: thin dotted;
@@ -739,11 +738,10 @@ dl.gallery-item img {
 * ==========================================================================
 */
 .footer-tail-sidebars {
-  background-color: #999;
+  background-color: #b51622;
   padding-top: 25px;
   padding-bottom: 25px;
-  border-top: solid 0px #87111a;
-
+  border-top: solid 1px #87111a;
 }
 .footer-tail-sidebars.widget-default .widget.widget-last,
 .footer-tail-sidebars.widget-inverse .widget.widget-last {
@@ -878,7 +876,7 @@ dl.gallery-item img {
   overflow: hidden;
   padding-bottom: 25px;
   margin-bottom: 25px;
- /* border-bottom: solid 1px #cccccc;*/
+  border-bottom: solid 1px #cccccc;
 }
 .widget a {
   color: #333333;
