--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ Tags: red, white, light, one-column, two-columns, left-sidebar, right-sidebar, r
 License: GNU General Public License, version 3 (GPLv3)
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 */
+
+@import url('iustyle.css');
+
 /*
 * ==========================================================================
 * Links
